# UnityGGPO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_windows.cmd
Unity/: .editorconfig
Unity/Assets/: BoltComponent.cs  FaceCamera.cs  Test.cs  test.unity
Unity/Assets/Art/: ForwardRenderer.asset  bullet.mat  ship.mat
Unity/Assets/Art/Materials/: background.mat  bullet.mat  ship.mat
Unity/Assets/Art/Models/: Executioner.prefab  Icosphere_drop 1.asset
Unity/Assets/EcsWar/Art/: bolt.mat  ship.mat
Unity/Assets/EcsWar/Authoring/: UnityGGPO.EcsWar.Authoring.asmdef
Unity/Assets/EcsWar/Authoring/Scripts/: PlayerComponent.cs
Unity/Assets/EcsWar/Prefabs/: Bolt.prefab  Missile.prefab  Player.prefab  Ship.prefab
Unity/Assets/EcsWar/Runtime/: UnityGGPO.EcsWar.Runtime.asmdef
Unity/Assets/EcsWar/Runtime/Prefabs/: Bolt.prefab  Ship.prefab
Unity/Assets/EcsWar/Runtime/Scenes/: EcsWar.unity
Unity/Assets/EcsWar/Runtime/Scripts/: Bolt.cs  BoltHitSystem.cs  BoltSpawnSystem.cs  Components.cs  EcsGame.cs  ForwardMoveSystem.cs  LifeData.cs  LifeDecayData.cs  MoveSystem.cs  PlayerMoveSystem.cs
Unity/Assets/EcsWar/Scenes/: EcsScene.asset  EcsWar.unity
Unity/Assets/EcsWar/Scripts/Authoring/: BoltInfoAuthoring.cs  EcsWar-Authoring.asmdef  MissileComponent.cs  MoveDataAuthoring.cs  PlayerComponent.cs  PlayerInfoAuthoring.cs  TinySpaceship.Authoring.asmdef
Unity/Assets/EcsWar/Scripts/Runtime/: Bolt.cs  BoltData.cs  BoltHitSystem.cs  BoltSpawnSystem.cs  CommonBaker.cs  Components.cs  EcsGame.cs  EcsGameManager.cs  EcsGameManagerTester.cs  EcsGameState.cs  EcsGameStateTester.cs  EcsGameTester.cs  EcsSceneInfo.cs  EcsWar-Runtime.asmdef  EcsWar.asmdef  ForwardMoveSystem.cs  KeyboardInputSystem.cs  Missile.cs  MissileHitSystem.cs  MissileSpawnSystem.cs  MoveData.cs  PlayerMoveSystem.cs  QueryTester.cs  TinySpaceship.asmdef
Unity/Assets/EcsWar/Tests/: RollbackTests.cs  SystemTicker2.cs
Unity/Assets/GGPOPlugin/: BitAccess.cs  GGPO.cs  GGPOPerformance.cs  GGPOPlugin.asset  GGPOPluginExample.cs  GGPOSession.cs
Unity/Assets/GGPOPlugin/NativeSource~/CMake/: CMakeLists.txt  Emscripten.cmake
Unity/Assets/GGPOPlugin/NativeSource~/Source/: Plugin.cpp  Plugin.h  ggponet.h
Unity/Assets/GGPOPlugin/Plugins/WebGL/: PluginJS.jslib
Unity/Assets/GlobalEntitiesDependencies/: GlobalEntitySceneDependency.asset
Unity/Assets/Plugins/Sirenix/Assemblies/: Sirenix.OdinInspector.Attributes.dll.mdb  Sirenix.OdinInspector.Editor.dll.mdb  Sirenix.OdinInspector.Editor.xml  Sirenix.Serialization.Config.dll.mdb  Sirenix.Serialization.dll.mdb  Sirenix.Utilities.Editor.dll.mdb  Sirenix.Utilities.dll.mdb
Unity/Assets/Resources/: BasicColourShader.shader  LineMaterial.mat
Unity/Assets/Scenes/: SampleScene.unity
Unity/Assets/Settings/: ForwardRenderer.asset  UniversalRP-HighQuality.asset  UniversalRP-LowQuality.asset  UniversalRP-MediumQuality.asset
Unity/Assets/SharedGame/: New Custom Universal Renderer Data.asset  UnityGGPO-SharedGame.asmdef  Universal Render Pipeline Asset.asset
Unity/Assets/SharedGame/Prefabs/: ConnectionInterface.prefab  GamePanel.prefab
Unity/Assets/SharedGame/Scripts/: BaseGGPOGame.cs  BaseLocalGame.cs  ConnectionInterface.cs  ConnectionPanel.cs  ConnectionWidget.cs  GGPOGame.cs  GameInfo.cs  GameInterface.cs  GameManager.cs  GameRunner.cs  Interfaces.cs  LocalGame.cs  LocalRunner.cs
Unity/Assets/Spaceship/: Asteroid.prefab  Missile.prefab  New Material 1.mat  New Material 2.mat  New Material.mat  New Physics Material Template.asset  PhysicsCategoryNames.asset  Player.prefab
Unity/Assets/Spaceship/Prefabs/: Asteroid.prefab  Missile.prefab  Player.prefab
Unity/Assets/Spaceship/Scenes/: SampleScene.unity
Unity/Assets/Test/: BitAccessTests.cs  GGPOPluginExample.cs  Test.cs
Unity/Assets/Tests/: SessionTests.cs  TestUnityGGPO.cs  UnityGGPO-Tests.asmdef  test.unity
Unity/Assets/Tests/Authoring/: UnityGGPO.Tests.Authoring.asmdef
Unity/Assets/Tests/Runtime/: UnityGGPO.Tests.Runtime.asmdef
Unity/Assets/Tests/Scenes/: EcsGameStateTest.unity  New Sub Scene.unity  Test.unity  asdf.unity
Unity/Assets/Tests/Scripts/: RollbackTests.cs  RotationSpeedData.cs  SessionTests.cs  SystemTicker1.cs  SystemTicker2.cs  TickCounterData.cs  UggTests.cs
Unity/Assets/UnityGGPO/: BitAccess.cs  DllTests.cs  GGPO.cs  GGPOPerformance.cs  GGPOPluginExample.cs  GGPOSession.cs  SessionTests.cs  Test.unity  UggTests.cs  UnityGGPO-Plugin.asmdef  UnityGGPOPlugin.asmdef
Unity/Assets/UnityGGPO/Performance/: GgpoPerformancePanel.cs
Unity/Assets/UnityGGPO/Scripts/: GGPO.cs  GGPOPerformance.cs  GGPOSession.cs  GuiHelper.cs  Helper.cs  SessionTests.cs  UggTests.cs  Utils.cs
Unity/Assets/UnityGGPO/Tests/: SessionTests.cs
Unity/Assets/VectorWar/: Bullet.prefab  ConnectionWidget.prefab  GGPO.cpp  GGPO.cs  GGPOPerformance.cs  Ship.prefab  ShipView.cs  UnityPlugin.cs  VectorWar.asmdef  VectorWar.cs  VectorWar.unity  VectorWarInterface.cs  VectorWarRenderer.cs  VectorWarRunner.cs  gamestate.cs  nongamestate.cs  plugintest.unity
Unity/Assets/VectorWar/Prefabs/: Bullet.prefab  ConnectionInterface.prefab  GGPOPerf.prefab  NewConnectionPanel.prefab  Ship.prefab
Unity/Assets/VectorWar/Runtime/: UnityGGPO.VectorWar.Runtime.asmdef
Unity/Assets/VectorWar/Scenes/: VectorWar.unity
Unity/Assets/VectorWar/Scripts/: ConnectionInterface.cs  GameState.cs  GameView.cs  NewConnectionPanel.cs  NonGameState.cs  ShipView.cs  VectorWar.cs  VectorWarInterface.cs  VectorWarRunner.cs  VwConnectionInterface.cs  VwGame.cs  VwGameManager.cs  VwGameState.cs  VwGameView.cs  VwOnlineGame.cs  VwShipView.cs
Unity/Assets/VectorWar/Shared/: BaseGgpoGame.cs  BaseLocalGame.cs  GameInterface.cs  GameRunner.cs  Interfaces.cs
Unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
Unity/UserSettings/: EditorUserSettings.asset  Search.settings
Unity/UserSettings/Layouts/: default-2022.dwlt
UnityGGPO/: .gitignore  CMakeLists.txt
UnityGGPO/src/: Plugin.cpp  Plugin.h  UnityGGPO.cpp  UnityGGPO.h
(+91 files in other folders)
